# fuel-brute

./: CMakeLists.txt  README.md  coagulate.cpp  cpu.cpp  crc32gpu.cu  cuda.cu  dictc.cpp  hashc.cpp
data/: ALL.LLPC  cog2.txt  crc32s.txt  dictionary.cog  exts.txt  gen.py  hashcout.txt  hashes.cog  meshes.txt  meshmaterial.txt  progress.py  reduced.dict  reduced.hash  reduced.txt  reducedhashes.txt
